.metadata/.plugins/org.eclipse.cdt.ui/training_RAI.build.log
15:52:16 **** Incremental Build of configuration Debug for project training_RAI ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/demo.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F411xE -DDEBUG -c -I../Drivers/CMSIS/Include -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/demo.d" -MT"Core/Src/demo.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/demo.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F411xE -DDEBUG -c -I../Drivers/CMSIS/Include -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
In file included from ../Core/Src/demo.c:8:0:
../Core/Inc/demo.h:11:9: error: expected identifier or '(' before '{' token
 typedef {
         ^
../Core/Inc/demo.h:15:3: warning: data definition has no type or storage class
 } DEMOSTUC;
   ^~~~~~~~
../Core/Inc/demo.h:15:3: warning: type defaults to 'int' in declaration of 'DEMOSTUC' [-Wimplicit-int]
make: *** [Core/Src/subdir.mk:36: Core/Src/demo.o] Error 1
make: *** Waiting for unfinished jobs....
In file included from ../Core/Src/main.c:26:0:
../Core/Inc/demo.h:11:9: error: expected identifier or '(' before '{' token
 typedef {
         ^
../Core/Inc/demo.h:15:3: warning: data definition has no type or storage class
 } DEMOSTUC;
   ^~~~~~~~
../Core/Inc/demo.h:15:3: warning: type defaults to 'int' in declaration of 'DEMOSTUC' [-Wimplicit-int]
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:122:25: warning: pointer targets in passing argument 1 of 'sprintf' differ in signedness [-Wpointer-sign]
   MSG1_length = sprintf(MSG1,"HELLO\n");
                         ^~~~
In file included from ../Core/Src/main.c:25:0:
c:\st\stm32cubeide_1.4.0\stm32cubeide\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.7-2018-q2-update.win32_1.4.0.202007081208\tools\arm-none-eabi\include\stdio.h:244:5: note: expected 'char * restrict' but argument is of type 'uint8_t * {aka unsigned char *}'
 int sprintf (char *__restrict, const char *__restrict, ...)
     ^~~~~~~
../Core/Src/main.c: In function 'HAL_UART_RxCpltCallback':
../Core/Src/main.c:437:26: warning: pointer targets in passing argument 1 of 'sprintf' differ in signedness [-Wpointer-sign]
    MSG1_length = sprintf(MSG1,"Set Speed = %d\n", speed);
                          ^~~~
In file included from ../Core/Src/main.c:25:0:
c:\st\stm32cubeide_1.4.0\stm32cubeide\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.7-2018-q2-update.win32_1.4.0.202007081208\tools\arm-none-eabi\include\stdio.h:244:5: note: expected 'char * restrict' but argument is of type 'uint8_t * {aka unsigned char *}'
 int sprintf (char *__restrict, const char *__restrict, ...)
     ^~~~~~~
../Core/Src/main.c: In function 'HAL_TIM_PeriodElapsedCallback':
../Core/Src/main.c:460:24: warning: pointer targets in passing argument 1 of 'sprintf' differ in signedness [-Wpointer-sign]
  MSG1_length = sprintf(MSG1,"Encoder = %d\n", encoder_value);
                        ^~~~
In file included from ../Core/Src/main.c:25:0:
c:\st\stm32cubeide_1.4.0\stm32cubeide\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.7-2018-q2-update.win32_1.4.0.202007081208\tools\arm-none-eabi\include\stdio.h:244:5: note: expected 'char * restrict' but argument is of type 'uint8_t * {aka unsigned char *}'
 int sprintf (char *__restrict, const char *__restrict, ...)
     ^~~~~~~
make: *** [Core/Src/subdir.mk:38: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

15:52:17 Build Failed. 5 errors, 7 warnings. (took 876ms)

